--- a/src/index.css
+++ b/src/index.css
@@ -180,3 +180,107 @@ nav{
     padding-left: 167px;
     color: white;
 }
+/* Home saloon container */
+
+.space-container{
+  border-top-right-radius: 274px;
+  border-bottom-right-radius: 274px;
+  border: 1px solid gold;
+  width: 950px;
+  height: 500px 
+}
+.HomeSaloon-container{
+  display: flex;
+  justify-content: center;
+  gap: 5%;
+  position: relative;
+}
+.HomeSaloon-Image-container{
+  width: 500px;
+  border-top-right-radius: 70px;
+  border-bottom-left-radius: 70px 
+}
+.btn-home-saloon{
+  width: 200px;
+  color:black;
+  background-color: #CCBB8E;
+}
+.btn-home-saloon:hover{
+  color: white;
+  background-color: goldenrod;
+}
+
+
+
+
+.container{
+height: 500px;
+  min-height: 700px;
+  padding: 4% 6%; 
+
+}
+
+div.card{
+  background: #000;
+  margin: 30px;
+  color: #fff;
+}
+.card_1{
+  padding-top: 30px;
+  height: 300px;
+}
+.card_1 h1{
+  width: 400px;
+  min-width: 100%;
+  z-index: 100;
+}
+.card-img1{
+  /* height: 220px; */
+  width: 300px;
+  border-bottom-left-radius: 30px;
+
+}
+.card-img2{
+  height: 360px;
+}
+.card-img3{
+  width: 300px;
+  /* height: 210px; */
+  border-bottom-right-radius: 30px;
+}
+.card_3{
+  padding-top: 30px;
+  height: 150px;
+}
+div.card-body{
+  padding: 0px;
+}
+
+p.card-text{
+  font-style: italic;
+  margin-top: 10px;
+  width: 180px;
+  max-width: 100%;
+}
+.card-image{
+  height: 200px;
+}
+.card_2 img{
+   width: 400px; 
+   height: 500px ;
+   background-position: center;
+   background-size:cover;
+  /* height: 100%; */
+  border-top-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+
+}
+.container h1{
+  color:white;
+}
+button{
+  padding: 10px 60px; 
+  color: black;
+  background-color: #CCBB8E;
+  ;
+}
