--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,15 @@
 body{
   background-color: black;
 }
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
   /* navbar  component*/
 nav{
+  margin-top: 100px;
+  border: 1px solid red;
   display: flex;
   justify-content: space-between;
   background: rgba(255, 255, 255, 0.1);
@@ -170,16 +177,19 @@ nav{
   border: 1px solid purple;
 }
 /* Reason to use Groomer  */
-.Grommer-container{
+ /* .Grommer-container{
   padding-top: 101px !important;
   /* padding-top: 91px; */
-}
+/* }
 .Reason-header{
     padding-top: 50px;
     margin-bottom: 80px;
     padding-left: 167px;
     color: white;
-}
+}  */ */
+
+
+
 /* Home saloon container */
 
 .space-container{
@@ -244,8 +254,8 @@ div.card{
   height: 360px;
 }
 .card-img3{
-  width: 300px;
-  /* height: 210px; */
+  width: 255px;
+    height: 305px ;
   border-bottom-right-radius: 30px;
 }
 .card_3{
@@ -278,16 +288,147 @@ p.card-text{
 .container h1{
   color:white;
 }
-button{
+/* button{
+  bottom: 20px;
   padding: 10px 60px; 
   color: black;
   background-color: #CCBB8E;
   ;
-}
+} */
 
 .slider-container{
   border: 5px solid green;
 }
 .carousel-card-container{
   background-image: url("https://s3-alpha-sig.figma.com/img/15da/db12/118d30f5d46ee8ce07e5fa265c120d05?Expires=1711324800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Po2yjP3orrrqbwYPa7jTbxjWtwb3A309mhfmy3f6dzPNORWrE3LwJV7MB2qI9-HhGbrHAu4tK0egUz-4y4q6n1pdL13Yxt4w6490He3loHQ8HMbT4amOS1IHFK6KcmDBx-laHt-clshohH9--IUKiJYTqs5qlHSMFgCHWrbPIpkqSw5TNw4K~t5X9km7ev8LakD9anXB-UfmHSykLu0ySn-euC6xjfSBo1X78009Swvku78UC2sJqtz85z2thcUlPJSiRzhaCorqbKcl3IH11FwyVL8VEKCo1h3uwJLcxh7fhgVXtxFVG14AmoXEue1EqmlUA5Dm~1fqt6202oy3UQ__");
+}
+
+
+
+/* MAin cards of the Home page Carousal */
+
+/* .box-card-container{
+   border: 1px solid green;
+   width: 45%;
+   height: 550px;
+   border-top-left-radius: 228px;
+    border-top-right-radius: 228px;
+} */
+.card-generator{
+  position: relative;
+  display: flex;
+   justify-content: space-between;
+   bottom: 326px;
+   left: 176px;
+   gap: 10%;
+  background-color: aqua;
+  width: 423px;
+  height: 80%;
+  border: 1px solid red;
+  padding: 10px;
+}
+.card-img1-card{
+ display: block;
+ width: 400px;
+ height: 500px;
+}
+
+
+.HomeSaloon-container{
+  height: 1000px;
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  gap: 60px;
+  padding: 4% 8%;
+  /* position: relative; */
+}
+.HomeSaloon-Image-container{
+  width: 550px;
+  max-width: 100%;
+  height: 500px;
+  border-top-right-radius: 70px;
+  border-bottom-left-radius: 70px;
+  object-fit: cover;
+  z-index: 1;
+}
+.service-content{
+  width: 700px;
+  position: relative;
+}
+.service-content::before{
+  position: absolute;
+  top: -100px;
+  left: -200px;
+  content: '';
+  /* background:gold; */
+  border: 1px solid silver; 
+  padding: 50%;
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+  z-index: -1;
+  width: 1050px;
+}
+.service-content h1{
+  font-size: 4.5rem;
+}
+.service-content p{
+  font-size: 1.5rem;
+  margin-bottom: 25px;
+
+}
+.btn-home-saloon{
+  /* width: 200px;
+  color:black; */
+  padding: 20px 80px;
+  margin-top: 70px;
+  background-color: #CCBB8E;
+  color: #000;
+  font-weight: bold;
+}
+.btn-home-saloon:hover{
+  color: white;
+  background-color: goldenrod;
+}
+
+
+
+
+
+/* main cards new  container */
+.card-box-container{
+  border: 1px solid goldenrod;
+  width: 45%;
+  height: 550px;
+  border-top-left-radius: 228px;
+  border-top-right-radius: 228px;
+  padding-top: 60px;
+}
+.carousel-card-img1{
+    width: 552px;
+    height: 413px;
+}
+.data-card-container{
+    border: 1px solid green;
+    width: 541px;
+}
+
+
+/* Cards -containrers */
+.parent-card-container{
+  
+     gap: 78px;
+    justify-content: center;
+    display: flex !important;
+}
+.cards-container{
+   width: 300px;
+   padding: 10px;
+}
+.card-img-container{
+  width: 300px;
+  height: 400px;
+}
+.card-body{
+  width: 300px;
 }
